use RelPath in watchman events
Summary: Make it clear watchman returns relative paths.

Reviewed By: bobyangyf

shipit-source-id: 18fd9de9568cd6735ae25f831654421420e9e7a0