@@ -19,6 +19,8 @@ package com.facebook.buck.core.files;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
+import com.facebook.buck.core.filesystems.AbsPath;
+import com.facebook.buck.core.filesystems.RelPath;
 import com.facebook.buck.event.FileHashCacheEvent;
 import com.facebook.buck.io.watchman.WatchmanEvent.Kind;
 import com.facebook.buck.io.watchman.WatchmanOverflowEvent;
@@ -79,13 +81,15 @@ public class DirectoryListCacheTest {
             ImmutableSortedSet.of()));
 
     // should not invalidate
-    WatchmanPathEvent event = WatchmanPathEvent.of(tmp.getRoot(), kind, Paths.get("dir1/file"));
+    WatchmanPathEvent event =
+        WatchmanPathEvent.of(AbsPath.of(tmp.getRoot()), kind, RelPath.of(Paths.get("dir1/file")));
     cache.getInvalidator().onFileSystemChange(event);
     Optional<DirectoryList> dlist = cache.get(ImmutableDirectoryListKey.of(Paths.get("dir")));
     assertTrue(dlist.isPresent());
 
     // should invalidate
-    event = WatchmanPathEvent.of(tmp.getRoot(), kind, Paths.get("dir/file1"));
+    event =
+        WatchmanPathEvent.of(AbsPath.of(tmp.getRoot()), kind, RelPath.of(Paths.get("dir/file1")));
     cache.getInvalidator().onFileSystemChange(event);
 
     dlist = cache.get(ImmutableDirectoryListKey.of(Paths.get("dir")));
@@ -103,7 +107,8 @@ public class DirectoryListCacheTest {
             ImmutableSortedSet.of(),
             ImmutableSortedSet.of()));
 
-    WatchmanPathEvent event = WatchmanPathEvent.of(tmp.getRoot(), kind, Paths.get("file1"));
+    WatchmanPathEvent event =
+        WatchmanPathEvent.of(AbsPath.of(tmp.getRoot()), kind, RelPath.of(Paths.get("file1")));
     cache.getInvalidator().onFileSystemChange(event);
     Optional<DirectoryList> dlist = cache.get(ImmutableDirectoryListKey.of(Paths.get("")));
     assertFalse(dlist.isPresent());
@@ -121,7 +126,8 @@ public class DirectoryListCacheTest {
 
     // should not invalidate
     WatchmanPathEvent event =
-        WatchmanPathEvent.of(tmp.getRoot(), Kind.MODIFY, Paths.get("dir/file"));
+        WatchmanPathEvent.of(
+            AbsPath.of(tmp.getRoot()), Kind.MODIFY, RelPath.of(Paths.get("dir/file")));
     cache.getInvalidator().onFileSystemChange(event);
     Optional<DirectoryList> dlist = cache.get(ImmutableDirectoryListKey.of(Paths.get("dir")));
     assertTrue(dlist.isPresent());
@@ -145,7 +151,7 @@ public class DirectoryListCacheTest {
             ImmutableSortedSet.of()));
 
     // should not invalidate
-    WatchmanOverflowEvent event = WatchmanOverflowEvent.of(tmp.getRoot(), "Test");
+    WatchmanOverflowEvent event = WatchmanOverflowEvent.of(AbsPath.of(tmp.getRoot()), "Test");
     cache.getInvalidator().onFileSystemChange(event);
     Optional<DirectoryList> dlist = cache.get(ImmutableDirectoryListKey.of(Paths.get("dir")));
     assertFalse(dlist.isPresent());
@@ -181,7 +187,9 @@ public class DirectoryListCacheTest {
 
     MoreFiles.deleteRecursively(dir2, RecursiveDeleteOption.ALLOW_INSECURE);
 
-    WatchmanPathEvent event = WatchmanPathEvent.of(root, Kind.DELETE, Paths.get("dir1/dir2/file2"));
+    WatchmanPathEvent event =
+        WatchmanPathEvent.of(
+            AbsPath.of(root), Kind.DELETE, RelPath.of(Paths.get("dir1/dir2/file2")));
     FileHashCacheEvent.InvalidationStarted started = FileHashCacheEvent.invalidationStarted();
     cache.getInvalidator().onInvalidationStart(started);
     cache.getInvalidator().onFileSystemChange(event);
@@ -221,7 +229,8 @@ public class DirectoryListCacheTest {
 
     MoreFiles.deleteRecursively(root, RecursiveDeleteOption.ALLOW_INSECURE);
 
-    WatchmanPathEvent event = WatchmanPathEvent.of(root, Kind.DELETE, Paths.get("dir/file"));
+    WatchmanPathEvent event =
+        WatchmanPathEvent.of(AbsPath.of(root), Kind.DELETE, RelPath.of(Paths.get("dir/file")));
     FileHashCacheEvent.InvalidationStarted started = FileHashCacheEvent.invalidationStarted();
     cache.getInvalidator().onInvalidationStart(started);
     cache.getInvalidator().onFileSystemChange(event);
